[project]
name = "hyperpipe-concrete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperpipe-core",
    "litellm>=1.77.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hyperpipe-core = { git = "https://github.com/icc-q99/hyperpipe", branch = "libtest-dev-1.0" }
