[project]
name = "hyperpipe-concrete"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "dateparser>=1.2.2",
    "hyperpipe-core @ git+ssh://git@github.com/icc-q99/hyperpipe-core",
    "litellm>=1.77.7",
    "neo4j>=6.0.2",
    "numpy>=2.3.3",
    "price-parser>=0.5.0",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hyperpipe-core = { git = "git+ssh://git@github.com/icc-q99/hyperpipe-core" }
